@@ -1,23 +1,19 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
-apply plugin: 'AndResGuard'
-
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdk 37
+    ndkVersion "28.0.12433510"
+
     defaultConfig {
         applicationId "io.hefuyi.listener"
-        minSdkVersion 16
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0b"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        renderscriptTargetApi 21
-        renderscriptSupportModeEnabled true
-        resConfigs "zh","en"
+        minSdk 30
+        targetSdk 37
+        versionCode 7
+        versionName "2.0.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resConfigs "zh", "en"
         ndk {
-            abiFilters "armeabi", "armeabi-v7a" ,"x86"
+            abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
 
@@ -32,81 +28,76 @@ android {
             versionNameSuffix "_debug"
         }
     }
+
+    buildFeatures {
+        buildConfig = true
+        resValues = true
+        aidl = true
+        viewBinding = true
+        dataBinding = true
+    }
+
+    packaging {
+        jniLibs {
+            useLegacyPackaging = false
+        }
+    }
+
+    namespace "io.hefuyi.listener"
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+    ]
+    options.compilerArgs << "-Xlint:deprecation"
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.7.0', {
+        exclude group: 'androidx.annotation', module: 'annotation'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    testImplementation 'junit:junit:4.13.2'
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:palette-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.media:media:1.8.0'
+    implementation 'com.google.android.material:material:1.14.0'
+    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.11.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.11.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.11.0'
 
     //rxjava
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.3.8'
     //glide
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    //butterknife
-    compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
     //retrofit2
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
     //materialicon
-    compile 'net.steamcrafted:materialiconlib:1.1.1'
-    //leakcanary
-//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-//    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-//    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    //stetho
-//    compile 'com.facebook.stetho:stetho:1.4.1'
-//    compile 'com.facebook.stetho:stetho-okhttp3:1.4.1'
+    implementation 'com.github.code-mc:material-icon-lib:1.1.5'
+
     //dagger2
-    compile 'com.google.dagger:dagger:2.0'
-    apt 'com.google.dagger:dagger-compiler:2.0'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    implementation 'com.google.dagger:dagger:2.60.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.60.1'
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
     //materialdialogs
-    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-    //imageloader
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     //slidinguppanel
-    compile 'com.sothree.slidinguppanel:library:3.3.1'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
     //app theme engine
-    compile('com.github.naman14:app-theme-engine:0.5.2@aar') {
+    implementation('com.github.naman14:app-theme-engine:0.5.2@aar') {
         transitive = true
     }
-
 }
 
-andResGuard {
-    // mappingFile = file("./resource_mapping.txt")
-    mappingFile = null
-    use7zip = true
-    useSign = true
-    // 打开这个开关，会keep住所有资源的原始路径，只混淆资源的名字
-    keepRoot = false
-    whiteList = [
-            // for your icon
-            "R.mipmap.ic_launcher",
-    ]
-    compressFilePattern = [
-            "*.png",
-            "*.jpg",
-            "*.jpeg",
-            "*.gif",
-            "resources.arsc"
-    ]
-    sevenzip {
-        artifact = 'com.tencent.mm:SevenZip:1.2.0'
-        //path = "/usr/local/bin/7za"
-    }
-}
